# LLaVA-Lucid-mini

./: chatbot.py  main.py  pyproject.toml
llava/: conversation.py  mm_utils.py  utils.py
llava/model/: __init__.py  builder.py  llava_arch.py
llava/model/language_model/: llava_qwen2.py
llava/model/multimodal_encoder/: builder.py  clip_encoder.py
llava/serve/: cli.py
