[build-system]
requires = ["setuptools>=64.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llava"
version = "1.3.9.dev"
description = "LLaVA-Lucid under development"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]

dependencies = [
    "open_clip_torch",
    "fastapi",
    "markdown2[all]",
    "numpy==1.26.1",
    "requests",
    "sentencepiece==0.1.99",
    "torch==2.3.1",
    "torchvision==0.18.1",
    "uvicorn",
    "wandb",
    "deepspeed==0.16.2",
    "peft==0.12.0",
    "accelerate==1.3.0",
    "tokenizers==0.21.0",
    "transformers==4.51",
    "bitsandbytes>=0.40.0",
    "scikit-learn>=1.2.2",
    "einops>=0.6.1",
    "einops-exts>=0.0.4",
    "gradio_client==0.2.9",
    "urllib3",
    "datasets>=2.16.1",
    "pydantic",
    "protobuf==3.20.3",
    "timm",
    "hf_transfer",
    "opencv-python",
    "av",
    "decord",
    "tyro",
    "scipy",
    "s2wrapper @ git+https://github.com/bfshi/scaling_on_scales.git",
    "streamlit>=1.45.1",
    "huggingface-hub>=0.32.3",
]

[project.optional-dependencies]
standalone = [
    "shortuuid",
    "httpx==0.24.0",
    "ftfy",
]

train = ["deepspeed==0.16.2", "ninja", "wandb"]
build = ["build", "twine"]

[project.urls]
"Homepage" = "https://llava-vl.github.io"
"Bug Tracker" = "https://github.com/haotian-liu/LLaVA/issues"

[tool.setuptools.packages.find]
exclude = ["assets*", "benchmark*", "docs", "dist*", "playground*", "scripts*", "tests*"]

[tool.wheel]
exclude = ["assets*", "benchmark*", "docs", "dist*", "playground*", "scripts*", "tests*"]


